--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
   background: #ce9fd4;
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ce9fd4, #eae6ea);
-  /* Chrome 10-25, Safari 5.1-6 */
+  /* Chrome 10-25, Saf56%ari 5.1-6 */
   background: linear-gradient(to right, #ce9fd4, #eae6ea);;
 }
 
@@ -122,3 +122,139 @@ body {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
+/* start dialog */
+.clear{
+  clear: both;
+}
+dialog{
+height: 550px;
+background-color: white;
+width: 100%;
+font-family: 'Roboto';
+border:none;
+
+}
+.title{
+  
+  text-align: center;
+}
+.content{
+  width: 40%;
+  float: left;
+  height: auto;
+}
+iframe{
+  float: right;
+  width: 40%;
+  height: 90%;
+  margin:1% ;
+}
+.discription{
+  margin:5%;
+  line-height: 1.5;
+}
+.info{
+  line-height: 1.2;
+  height: 40%;
+  width:100%;
+  float:left;
+}
+.content{
+  overflow: hidden;
+}
+.content img{
+  width:440px;
+  height: 220px;
+  margin-top:10px;
+}
+.divwidth{
+  width: 100%;
+text-align: center;
+}
+.discription{
+  line-height: 1.5;
+  padding-bottom: 2px;
+}
+span{
+  margin-right: 1.5%;
+}
+span br{
+  margin-bottom: 5px;
+}
+hr {
+  display: block;
+  margin-top: 0.3em;
+  border-style: inset;
+  border-width: 1px;
+  margin-left: 2%;
+  margin-bottom: -50px;
+}
+.close{
+  position:absolute;
+ 
+  background:transparent;
+  bottom:40px;
+  right:25%;
+  left:50%;
+  padding: 8px 25px;
+  border:1px solid black;
+}
+
+@media(max-width:1000px){
+  .content img{
+    margin-left: 15px;
+    width:330px;
+    height: 220px;
+    margin-top:10px;
+  }
+}
+@media(max-width:750px){
+  *{
+    margin: 0;
+    padding: 0;
+  }
+  .info{
+    line-height: 2;
+    height: 40%;
+    width:100%;
+    float:left;
+  }
+  .content img{
+   display: none;
+  }
+
+  .content{
+    width: 100%;
+  }
+  iframe{
+    
+    width: 100%;
+    height: 40%;
+  
+  }
+  
+  .info{
+    line-height: 2;
+    height: 40%;
+  
+  }
+  
+  .discription{
+    line-height: 1.5;
+    padding-bottom: 2px;
+  }
+  span{
+    margin-right: 0%;
+  }
+  hr {
+    display: block;
+    margin-top: 0.3em;
+    border-style: inset;
+    border-width: 1px;
+    margin-left: 2%;
+  }
+
+
+}
+
+/* End dialog */
